Fix thumb pic z index to keep it behind modal

--- a/client/scss/_report.scss
+++ b/client/scss/_report.scss
@@ -144,7 +144,7 @@ $element-height: 362px;
   .Thumb-image {
     float: right;
     position: absolute;
-    z-index: 1;
+    z-index: 0;
     width: 40%;
     top: 100px;
     right: -10px;
